# dc32-badge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  default.nix  flake.nix  pico-sdk.nix  picotool.nix
.github/workflows/: cmake.yml  firmware.yml
src/: HSV2RGB.c  cycle_delay.S  keymap.c  keymap.h  main.c  quadrature_encoder.pio  rotary_encoder.pio  tusb_config.h  usb_descriptors.c  usb_descriptors.h
